fixed cmake not finding c files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,15 @@
-add_definitions(-DTABLESDIR "/spiffs/tables")
-add_definitions(-DENABLE_UCS4)
+if(NOT CMAKE_BUILD_EARLY_EXPANSION) 
+        add_definitions(-DTABLESDIR "/spiffs/tables")
+        add_definitions(-DENABLE_UCS4)
+endif()
 
-idf_component_register(SRCS "commonTranslationFunctions.c"
-                            "compileTranslationTable.c"
-                            "logging.c"
-                            "lou_backTranslateString.c"
-                            "lou_translateString.c"
-                            "maketable.c"
-                            "metadata.c"
-                            "pattern.c"
-                            "utils.c"
+idf_component_register(SRCS "liblouis/commonTranslationFunctions.c"
+                            "liblouis/compileTranslationTable.c"
+                            "liblouis/logging.c"
+                            "liblouis/lou_backTranslateString.c"
+                            "liblouis/lou_translateString.c"
+                            "liblouis/maketable.c"
+                            "liblouis/metadata.c"
+                            "liblouis/pattern.c"
+                            "liblouis/utils.c"
                     INCLUDE_DIRS "liblouis")
